--- a/web/style.css
+++ b/web/style.css
@@ -263,7 +263,7 @@ button1 {
     width: 10em;
     position: relative;
     height: 3.5em;
-    border: 3px ridge #149CEA;
+    border: 3px ridge #ffffff;
     outline: none;
     background-color: transparent;
     color: white;
@@ -303,5 +303,11 @@ button1 {
   }
   
   button1:hover {
-    box-shadow: inset 0px 0px 25px #1479EA;
+    box-shadow: inset 0px 0px 25px #ffffff;
+  }
+
+
+  .img1{
+    height: 150px;
+    width: 150px;
   }
